<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dvrk_model</name>
  <version>2.2.0</version>
  <description>URDF and STL files for the dVRK</description>
  <maintainer email="anton.deguet@jhu.edu">Anton Deguet</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
